Add New Licence Settings

--- a/NobitexAPI.Sharp/NobitexAPI.Sharp.csproj
+++ b/NobitexAPI.Sharp/NobitexAPI.Sharp.csproj
@@ -2,11 +2,33 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <ApplicationIcon>NobitexLogo@4x.ico</ApplicationIcon>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Authors>PowerDeveloper</Authors>
+    <Description>Nobitex API Package For C# Developers
+Read More:
+https://github.com/powerd3v/NobitexAPI.Sharp</Description>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/powerd3v/NobitexAPI.Sharp/</PackageProjectUrl>
+    <PackageIcon>NobitexLogo@4x.png</PackageIcon>
+    <PackageIconUrl />
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RestSharp" Version="106.13.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\OneDrive - Sky University\Pictures\Nobitex-Desktop\LICENSE.md">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\..\..\..\OneDrive - Sky University\Pictures\Nobitex-Desktop\NobitexLogo@4x.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
